tests/ui/feature-gates/feature-gate-closure_lifetime_binder.stderr
error[E0658]: `for<...>` binders for closures are experimental
  --> $DIR/feature-gate-closure_lifetime_binder.rs:2:5
   |
LL |     for<> || -> () {};
   |     ^^^^^
   |
   = note: see issue #97362 <https://github.com/rust-lang/rust/issues/97362> for more information
   = help: add `#![feature(closure_lifetime_binder)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider removing `for<...>`

error[E0658]: `for<...>` binders for closures are experimental
  --> $DIR/feature-gate-closure_lifetime_binder.rs:4:5
   |
LL |     for<'a> || -> () {};
   |     ^^^^^^^
   |
   = note: see issue #97362 <https://github.com/rust-lang/rust/issues/97362> for more information
   = help: add `#![feature(closure_lifetime_binder)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider removing `for<...>`

error[E0658]: `for<...>` binders for closures are experimental
  --> $DIR/feature-gate-closure_lifetime_binder.rs:6:5
   |
LL |     for<'a, 'b> |_: &'a ()| -> () {};
   |     ^^^^^^^^^^^
   |
   = note: see issue #97362 <https://github.com/rust-lang/rust/issues/97362> for more information
   = help: add `#![feature(closure_lifetime_binder)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = help: consider removing `for<...>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
